--- a/package.json
+++ b/package.json
@@ -1,8 +1,12 @@
-{"homepage":"https://akash981616.github.io/Todo-List/",
+{
+  "homepage": "https://akash981616.github.io/Todo-List/",
   "name": "todo",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.8.1",
+    "@emotion/styled": "^11.8.1",
+    "@mui/material": "^5.4.3",
     "@reduxjs/toolkit": "^1.7.1",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
